# Pink-Serpent

./: .gitignore  CMakeLists.txt  README.md
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
proj.android-studio/: gradle.properties  settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle
proj.android-studio/app/jni/: Android.mk
proj.android-studio/app/jni/hellocpp/: main.cpp
proj.android-studio/app/res/values/: strings.xml
proj.android-studio/gradle/wrapper/: gradle-wrapper.properties
proj.android/res/values/: strings.xml
proj.ios_mac/Pink-Serpent.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.linux/: main.cpp
proj.tizen/: .project  tizen-manifest.xml
proj.win10/: Pink-Serpent.sln
proj.win10/App/: Package.appxmanifest  Pink-Serpent.vcxproj  Pink-Serpent.vcxproj.filters
proj.win32/: Pink-Serpent.sln  Pink-Serpent.vcxproj  Pink-Serpent.vcxproj.filters
proj.win8.1-universal/: Pink-Serpent.sln
proj.win8.1-universal/App.Shared/: Pink-Serpent.Shared.vcxitems
proj.win8.1-universal/App.Windows/: Package.appxmanifest  Pink-Serpent.Windows.vcxproj  Pink-Serpent.Windows.vcxproj.filters
proj.win8.1-universal/App.WindowsPhone/: Package.appxmanifest  Pink-Serpent.WindowsPhone.vcxproj
src/: AppDelegate.cpp  AppDelegate.h  Board.cpp  Board.h  Cell.cpp  Cell.h  Horse.cpp  Horse.h  JsonFileListener.cpp  JsonFileListener.h  MainLayer.cpp  MainLayer.h  main.cpp
